--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/matter-js": "^0.19.6",
 		"@types/p5": "^1.7.6",
+		"axios": "^1.7.2",
+		"fs-extra": "^11.2.0",
+		"matter-js": "^0.19.0",
 		"p5": "^1.9.3"
 	}
 }
